--- a/photos_2025-01-25_18-53/Grammar/Gramática da Língua Inglesa/20-C.md
+++ b/photos_2025-01-25_18-53/Grammar/Gramática da Língua Inglesa/20-C.md
@@ -10,11 +10,10 @@ Exemplos:
 - [ ] key – keys;
 - [ ] guy – guys;
 
-• quando antecedidos por consoante, trocamos o “y” por “i” e acres-
-centamos “es”.
+• quando antecedidos por consoante, trocamos o “y” por “i” e acrescentamos “es”.
 
 Exemplos:
-- [ ] story – stories
-- [ ] baby – babies
-- [ ] vocabulary – vocabularies
-- [ ] city – cities
+- [ ] story – stories;
+- [ ] baby – babies;
+- [ ] vocabulary – vocabularies;
+- [ ] city – cities;
