--- a/photos_2025-01-25_18-53/Grammar/Gramática da Língua Inglesa/20-D.md
+++ b/photos_2025-01-25_18-53/Grammar/Gramática da Língua Inglesa/20-D.md
@@ -5,8 +5,7 @@ d) Aos substantivos terminados em “o”:
 • quando antecedidos por vogal, acrescentamos a letra “s”. O mesmo ocorre com palavras terminadas em “oo”.
 
 Exemplos:
-- [ ] radio (rádio) – radios
-- [ ] studio (estúdio) – studios
-
-- [ ] zoo (zoológico) – zoos
-- [ ] bamboo (bambu) – bamboos
+- [ ] radio – radios;
+- [ ] studio  – studios;
+- [ ] zoo  – zoos;
+- [ ] bamboo – bamboos;
